feat: scanner 전송 실행기 및 ingest 발행 실행기를 bounded 스레드 풀로 교체
scanner의 transmitBatch는 Spring 기본 @Async 실행기(무제한 스레드 생성)를
그대로 쓰고 있어 전용 bounded ThreadPoolTaskExecutor(+CallerRunsPolicy)로
교체. ingest의 kafkaSendExecutor는 가상 스레드 대신 고정 크기(250, scanner
배치 크기 상한) 플랫폼 스레드 풀로 교체해 Java 21 미만 버전에서도 동작하게
함. 부수적으로 공개 저장소에 없는 내부 문서를 가리키던 주석 참조 정리.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>